--- a/css/utils.css
+++ b/css/utils.css
@@ -75,6 +75,21 @@
   color: #fff;
 }
 
+/* Text colors */
+
+.text-primary {
+  color: var(--primary-color);
+  font-weight: bold;
+}
+
+.text-dark {
+  color: var(--dark-color);
+}
+
+.text-light {
+  color: var(--light-color);
+}
+
 /* Text sizes */
 
 .lead {
@@ -96,6 +111,30 @@
 .xl {
   font-size: 4rem;
 }
+
+/* Alerts */
+
+.alert {
+  background-color: var(--dim-color);
+  padding: 10px 20px;
+  margin: 15px 0;
+  font-weight: bold;
+}
+
+.alert i {
+  margin-right: 10px;
+}
+
+.alert-success {
+  background-color: var(--success-color);
+  color: #fff;
+}
+
+.alert-error {
+  background-color: var(--error-color);
+  color: #fff;
+}
+
 /* Margin */
 .my-1 {
   margin: 1rem 0;
