--- a/css/style.css
+++ b/css/style.css
@@ -408,3 +408,30 @@ pre {
     justify-self: center;
   }
 }
+
+@media (max-width: 420px) {
+  .showcase-text h1 {
+    margin: 10px 0;
+  }
+
+  .showcase {
+    height: 600px;
+  }
+
+  .features-head {
+    height: 600px;
+  }
+}
+
+@media (max-width: 375px) {
+  .features-text h1 {
+    font-size: 2em;
+  }
+}
+
+@media (max-width: 280px) {
+  .features-text h1 {
+    margin-bottom: 0;
+    margin-top: 15px;
+  }
+}
